Fix syntax problem preventing submitter_notification and share_notification email values from being printed if they are not set, partially fixed layout issue with some third-party CP themes

--- a/themes/styles/screen.css
+++ b/themes/styles/screen.css
@@ -102,7 +102,7 @@ Main Nav buttons
 
 .heading {
 	position: relative;
-	height: 33px;
+	height: 40px;
 }
 
 table.mainTable tr td:first-child {
